--- a/schema.toml
+++ b/schema.toml
@@ -26,7 +26,7 @@ type = { default = "BOOLEAN" }
 notnull = true
 
 [[tables.columns]]
-column = "count"
+column = "num_files"
 type = { default = "INT" }
 
 [[tables.columns]]
